# scansnap_to_obsidian

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.json.example
doc/: SETUP_GUIDE.md  system_architecture.md
src/: obsidian_ocr_enhancer.py  scansnap_to_obsidian.py
src/core/: utils.py
src/processors/: base_processor.py  image_processor.py  pdf_processor.py
